# multihead-sdpadiff

./: .gitignore  README.md  multihead_sdpadiff_1.py  multihead_sdpadiff_2.py  multihead_sdpadiff_3.py  pyproject.toml  requirements.txt  rms_norm.py  sanity_check_2.py
src/multihead_sdpadiff/: __init__.py  multihead_sdpadiff_1.py  multihead_sdpadiff_2.py  multihead_sdpadiff_3.py  multihead_sdpadiff_4.py
src/multihead_sdpadiff/utils/: rotary.py
test/: sanity_check_1.py
