[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version="0.0.1"
name = "multihead_sdpadiff"
authors = [
    { name="Anton Vlasjuk" },
]
description = "A set of SDPA implementations for Diff Attention."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: Unix",
]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
